Message / Video, Web Page: Fix media overflow

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -5,7 +5,10 @@
   position: relative;
 
   video,
-  img {
+  img,
+  canvas {
+    width: 100%;
+    height: 100%;
     display: block;
     object-fit: cover;
   }
